[package]
name = "rustbase-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust Rustbase driver"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["net", "macros", "rt-multi-thread", "io-std", "io-util"] }
bson = "2.4.0"
serde = { version ="1.0.151", features = ["derive"] }
serde_json = "1.0.91"